2023-11-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-file-name-all-completions): Handle ".""
	and "..".

	* tramp-adb.el (tramp-adb-handle-file-name-all-completions):
	* tramp-fuse.el (tramp-fuse-handle-file-name-all-completions):
	* tramp-gvfs.el (tramp-gvfs-handle-file-name-all-completions):
	Remove special handling of "." an "..".

	* tramp-sh.el (tramp-send-command-and-read): Use 'space' instead
	of 'blank' in rx expression, in order to handle also CR and alike.
	Reported by Dominique Quatravaux <dominique@quatravaux.org>.

2023-11-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-file-truename)
	(tramp-skeleton-write-region, tramp-handle-file-truename):
	* tramp-integration.el (tramp-eshell-directory-change)
	(tramp-recentf-exclude-predicate):
	* tramp-smb.el (tramp-smb-handle-copy-file):
	* tramp-sudoedit.el (tramp-sudoedit-do-copy-or-rename-file):
	Use `tramp-tramp-file-p' instead of `file-remote-p'.

2023-11-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-file-name-all-completions): New defmacro.
	(tramp-completion-handle-file-name-all-completions):
	* tramp-adb.el (tramp-adb-handle-file-name-all-completions):
	* tramp-crypt.el (tramp-crypt-handle-file-name-all-completions):
	* tramp-fuse.el (tramp-fuse-handle-file-name-all-completions):
	* tramp-gvfs.el (tramp-gvfs-handle-file-name-all-completions):
	* tramp-sh.el (tramp-sh-handle-file-name-all-completions):
	* tramp-smb.el (tramp-smb-handle-file-name-all-completions):
	* tramp-sudoedit.el (tramp-sudoedit-handle-file-name-all-completions):
	Use it.

2023-10-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp-sh.el: Require `cl-lib` rather than `cl-seq`.

2023-10-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-read-id-output): Identifiers can contain "-".

2023-10-19  Michael Albinus  <michael.albinus@gmx.de>

	* trampver.el.in (customize-package-emacs-version-alist):